Added a div class to html

--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <p>👋🏽 Hello I am</p>
+      <hi>Bukola Fabunmi</hi>
+      <h2>A Front end devloper based in Toronto</h2>
+      <a href="#" class="btn-btn-branding"> Contact me</a>
+    </div>
+  </body>
 </html>
