Corrected some typo errors

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <body>
     <div class="hero">
       <p>👋🏽 Hello I am</p>
-      <hi>Bukola Fabunmi</hi>
-      <h2>A Front end devloper based in Toronto</h2>
+      <h1>Bukola Fabunmi</h1>
+      <h2>A Front-end devloper based in Toronto</h2>
       <a href="#" class="btn-btn-branding"> Contact me</a>
     </div>
   </body>
