Added a div class to h2

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="hero">
       <p>👋🏽 Hello I am</p>
       <h1>Bukola Fabunmi</h1>
-      <h2>A Front-end devloper based in Toronto</h2>
-      <a href="#" class="btn-btn-branding"> Contact me</a>
+      <h2 class="mb-5">A Front-end devloper based in Toronto</h2>
+      <div>
+        <a href="#" class="btn-btn-branding"> Contact me</a>
+      </div>
     </div>
   </body>
 </html>
