--- a/index.html
+++ b/index.html
@@ -37,5 +37,22 @@
         <a href="#" class="btn-btn-branding"> Contact me</a>
       </div>
     </div>
-  </body>
+    <div class="container">
+        <div class="row">
+            <div class="col-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-6"> <p class="text-center m-5">Featured project which my best projects be so far</p>
+    <h2 class="mb-5">smoothie project</h2>
+    <p class="mb-4">
+      Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj dsjkhflkje;lf dj
+      nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh kjhdklshfkl jaldd hgjdhgjsh mhdjhkj
+      jbdsjdk sangsfd dfhg mdhfg hgf jhgk nbviuf if fhdf gthf the jyd yus os js
+      us us us y is kiss jdhuf
+    </p>
+    <a href="" class= btn btn-branding-outline>Learn more</a></div>
+   
+</div>    
+</body>
+
 </html>
