Added image src

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <div class="hero">
@@ -43,17 +43,22 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
+            <img src="images/Smoothie.jpg" class="img-fluid" alt=""/>
+
       </div>
       
         <div class="col-6">
-             <h2 class="mb-5">smoothie project</h2>
-             <p class="mb-4">
+             <h2 class="mb-5">Smoothie Project</h2>
+             <p class="mb-5" text-muted>
             Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+            dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh kjhdklshfkl
+            jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf jhgk nbviuf
+            if fhdf gthf the jyd yus os js us us us y is kiss jdhuf Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
             dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh kjhdklshfkl
             jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf jhgk nbviuf
             if fhdf gthf the jyd yus os js us us us y is kiss jdhuf
           </p>
-          <a href="" class="btn" btn-branding-outline>Learn more</a>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
           
         </div>
     </div>
