--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </div>
       
         <div class="col-6">
+            <div class="project description">
              <h2 class="mb-5">Smoothie Project</h2>
              <p class="mb-5" text-muted>
             Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
@@ -59,7 +60,7 @@
             if fhdf gthf the jyd yus os js us us us y is kiss jdhuf
           </p>
           <a href="#" class="btn btn-branding-outline">Learn more</a>
-          
+          </div>
         </div>
     </div>
   </body>
