--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="hero">
@@ -38,30 +38,32 @@
       </div>
     </div>
     <p class="text-center m-5">
-            Featured project which my best projects be so far
-          </p>
+      Featured project which my best projects be so far
+    </p>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-            <img src="images/Smoothie.jpg" class="img-fluid" alt=""/>
+        <div class="col d-none d-lg-block">
+          <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
+        </div>
 
-      </div>
-      
-        <div class="col-6">
-            <div class="project description">
-             <h2 class="mb-5">Smoothie Project</h2>
-             <p class="mb-5" text-muted>
-            Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
-            dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh kjhdklshfkl
-            jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf jhgk nbviuf
-            if fhdf gthf the jyd yus os js us us us y is kiss jdhuf Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
-            dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh kjhdklshfkl
-            jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf jhgk nbviuf
-            if fhdf gthf the jyd yus os js us us us y is kiss jdhuf
-          </p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Smoothie Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
+      </div>
     </div>
   </body>
 </html>
