--- a/index.html
+++ b/index.html
@@ -34,13 +34,59 @@
       <h1>Bukola Fabunmi</h1>
       <h2 class="mb-5">A Front-end devloper based in Toronto</h2>
       <div>
-        <a href="#" class="btn-btn-branding"> Contact me</a>
+        <a href="#" class="btn-btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
       Featured project which my best projects be so far
     </p>
     <div class="container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
+        </div>
+
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Smoothie Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
+        </div>
+
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Smoothie Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
+              dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
+              kjhdklshfkl jaldd hgjdhgjsh mhdjhkj jbdsjdk sangsfd dfhg mdhfg hgf
+              jhgk nbviuf if fhdf gthf the jyd yus os js us us us y is kiss
+              jdhuf
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col d-none d-lg-block">
           <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
