Added margin to html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Featured project which my best projects be so far
     </p>
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
         </div>
@@ -64,14 +64,14 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
+          <img src="images/weather2.jpg" class="img-fluid" alt="" />
         </div>
 
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Smoothie Project</h2>
+            <h2 class="mb-5">Second Weather Project</h2>
             <p class="mb-5 text-muted">
               Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
               dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
@@ -87,14 +87,14 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Smoothie.jpg" class="img-fluid" alt="" />
+          <img src="images/weatherr.jpg" class="img-fluid" alt="" />
         </div>
 
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Smoothie Project</h2>
+            <h2 class="mb-5">First Weather Project</h2>
             <p class="mb-5 text-muted">
               Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
               dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
