--- a/index.html
+++ b/index.html
@@ -65,13 +65,9 @@
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/weather2.jpg" class="img-fluid" alt="" />
-        </div>
-
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Second Weather Project</h2>
+            <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
               Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
               dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
@@ -85,6 +81,9 @@
             </p>
             <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
+          <div class="col d-none d-lg-block">
+            <img src="images/weather2.jpg" class="img-fluid" alt="" />
+          </div>
         </div>
       </div>
       <div class="row mb-5">
@@ -94,7 +93,7 @@
 
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">First Weather Project</h2>
+            <h2 class="mb-5">Second Weather App</h2>
             <p class="mb-5 text-muted">
               Far far away kjlkjdkjs shdkjhslkd sdkjsdlkjs; kdhulijlfkj
               dsjkhflkje;lf dj nfhdf jdhsh dks m djhkhlhk hdfhfkdhkfh
