--- a/index.html
+++ b/index.html
@@ -29,6 +29,47 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html" title="link to my homepage"
+          >Bukola Fabunmi</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="index.html"
+              title="link to homepage"
+              >Home</a
+            >
+            <a
+              class="nav-link"
+              href="about.html"
+              title="link to about me tab of Bukola Fabunmi profile"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="about.html"
+              title="link to Contact me tab of Bukola Fabunmi profile"
+              >Contact me</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>👋🏽 Hello I am</p>
       <h1>Bukola Fabunmi</h1>
