--- a/index.html
+++ b/index.html
@@ -151,5 +151,28 @@
         </div>
       </div>
     </div>
+    <footer class="d-flex justify-content-between">
+      <div class="footer-brand">Bukola Fabunmi</div>
+      <div class="social-icons">
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          title="instagram-link"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          target="_blank"
+          title="facebook-link"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/"
+          target="_blank"
+          title="linkedin-link"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
